# codewars-rust

./: Cargo.toml  README.md
components/arc/: Cargo.toml
components/arc/src/: lib.rs
components/buying_a_car/: README.md
components/buying_a_car/src/: lib.rs
components/chess_board_cell_color/: Cargo.toml  README.md
components/chess_board_cell_color/src/: lib.rs
components/decode_the_morse_code/: Cargo.toml  README.md
components/decode_the_morse_code/src/: lib.rs
components/dir_reduc/: Cargo.toml  README.md
components/dir_reduc/src/: lib.rs
components/factorial_decomposition/: Cargo.toml  README.md
components/factorial_decomposition/src/: lib.rs
components/good_vs_evil/: Cargo.toml  README.md
components/good_vs_evil/src/: lib.rs
components/next_smaller_number_with_same_digits/: Cargo.toml  README.md
components/next_smaller_number_with_same_digits/src/: lib.rs
components/range_extraction/: Cargo.toml
components/range_extraction/src/: lib.rs
components/recreation_one/: Cargo.toml  README.md
components/recreation_one/src/: lib.rs
components/sum_by_factors/: Cargo.toml  README.md
components/sum_by_factors/src/: lib.rs
components/sum_of_pairs/: Cargo.toml  README.md
components/sum_of_pairs/src/: lib.rs
components/twice_linear/: Cargo.toml  README.md
components/twice_linear/src/: lib.rs
src/: main.rs
