[package]
name = "rust-test"
version = "0.1.0"
authors = ["you06"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc_learn = { path = "./components/arc", default-features = false }
good_vs_evil = { path = "./components/good_vs_evil", default-features = false }
buying_a_car = { path = "./components/buying_a_car", default-features = false }
dir_reduc = { path = "./components/dir_reduc", default-features = false }
factorial_decomposition = {path = "./components/factorial_decomposition", default-features = false }
sum_of_pairs = {path = "./components/sum_of_pairs", default-features = false }
recreation_one = {path = "./components/recreation_one", default-features = false }
